# py-sparcli

./: .editorconfig  .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
docs/: DEVELOPMENT.md
examples/: output_dynamic.py  output_gallery.py  output_readme.py  prompt_readme.py  prompts.py
sparcli/: __init__.py  errors.py
sparcli/core/: __init__.py  border.py  color.py  command.py  cursor.py  geometry.py  hsl.py  inplace.py  markup.py  render.py  style.py  terminal.py  text.py  theme.py  width.py
sparcli/core/width/: __init__.py  line.py  measure.py
sparcli/input/: __init__.py  calc.py  completion.py  confirm.py  datepicker.py  editor.py  event.py  field.py  fuzzy.py  guard.py  history.py  keydecode.py  line_edit.py  number.py  outcome.py  password.py  prompt.py  recall.py  select.py  selection.py  shortcut.py  text.py  textarea.py  validate.py
sparcli/output/: __init__.py  alert.py  badge.py  box.py  columns.py  compose.py  diff.py  kv.py  layout.py  list.py  live.py  multiprogress.py  pager.py  panel.py  progress.py  rule.py  spinner.py  tree.py
sparcli/output/card/: __init__.py  card.py  palette.py  render.py
sparcli/output/table/: __init__.py  plan.py  render.py  table.py
tests/: conftest.py  test_box.py  test_card.py  test_confirm.py  test_core.py  test_cursor.py  test_datepicker.py  test_external_commands.py  test_fuzzy.py  test_history.py  test_input_collaborators.py  test_input_infra.py  test_keydecode.py  test_number.py  test_output_basic.py  test_output_dynamic.py  test_output_streams.py  test_output_structured.py  test_password.py  test_public_api.py  test_select.py  test_table.py  test_table_plan.py  test_text_input.py  test_textarea.py
