[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-sparcli"
version = "0.1.0"
description = "Styled CLI output and interactive input widgets, dependency-free"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Corvin Gröning" }]
dependencies = []
keywords = ["cli", "terminal", "prompt", "color", "ansi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/cgroening/py-sparcli"
Repository = "https://github.com/cgroening/py-sparcli"

[tool.hatch.build.targets.wheel]
packages = ["sparcli"]

[tool.pyright]
typeCheckingMode = "strict"
exclude = [
    "**/.*",
    "**/__pycache__",
    "**/*.pyc",
    ".venv",
    "venv",
    "**/node_modules",
]
reportUnannotatedClassAttribute = "none"
reportUnusedCallResult = "none"
reportCallInDefaultInitializer = "none"
reportImplicitOverride = "none"
reportMissingTypeStubs = "none"
reportImplicitStringConcatenation = "none"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "S", "RUF100"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"examples/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["sparcli", "tests"]
addopts = "--doctest-modules --ignore=examples"
